--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "consolejs",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "JavaScript library that overrides the console object bringing its functionality in a DOM element.",
   "main": "lib/console.js",
   "directories": {
@@ -62,5 +62,16 @@
     "ex_img": "http://i.imgur.com/PmkC20x.gif",
     "ex_url": "http://ionicabizau.github.io/console.js/",
     "show_installation": false
-  }
+  },
+  "files": [
+    "bin/",
+    "app/",
+    "lib/",
+    "dist/",
+    "src/",
+    "resources/",
+    "menu/",
+    "cli.js",
+    "index.js"
+  ]
 }
