--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "consolejs",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "JavaScript library that overrides the console object bringing its functionality in a DOM element.",
   "main": "lib/console.js",
   "directories": {
@@ -67,6 +67,7 @@
     "bin/",
     "app/",
     "lib/",
+    "build/",
     "dist/",
     "src/",
     "resources/",
