--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "consolejs",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "JavaScript library that overrides the console object bringing its functionality in a DOM element.",
   "main": "lib/console.js",
   "directories": {
@@ -73,6 +73,9 @@
     "resources/",
     "menu/",
     "cli.js",
-    "index.js"
+    "index.js",
+    "bloggify.js",
+    "bloggify.json",
+    "bloggify/"
   ]
 }
