--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "consolejs",
-  "version": "1.2.13",
+  "version": "1.2.14",
   "description": "JavaScript library that overrides the console object bringing its functionality in a DOM element.",
   "main": "lib/console.js",
   "directories": {
@@ -74,6 +74,8 @@
     "menu/",
     "cli.js",
     "index.js",
+    "index.d.ts",
+    "package-lock.json",
     "bloggify.js",
     "bloggify.json",
     "bloggify/"
